# auto-unifi-adopt-rust-1SYSTEMSinstallation

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_ON_MAC.md  Cargo.toml  README.md  WINDOWS_DEBUG.md  WINDOWS_FIXES.md  build.rs  config.example.txt
.github/workflows/: build-windows-installer.yml
src/: config.rs  main.rs  messages.rs  models.rs  network_interface.rs  network_scanner.rs  oui_database.rs  ssh_handler.rs  styles.rs
src/views/: main_view.rs  mod.rs  scan_view.rs  settings_view.rs
wix/: main.wxs
