[package]
name = "auto-unifi-adopt-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Automatic UniFi Device Adoption Tool"
license = "MIT"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
get_if_addrs = "0.5"

[build-dependencies]
winres = "0.1"

[package.metadata.wix]
upgrade-guid = "12345678-1234-1234-1234-123456789012"
path-guid = "23456789-2345-2345-2345-234567890123"
license = false
eula = false
